--- a/shortphonenumshow/res/menu/main.xml
+++ b/shortphonenumshow/res/menu/main.xml
@@ -1,9 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/accept" android:title="分享到微博"></item><item android:id="@+id/about" android:title="关于"></item>
+    <item android:id="@+id/quit" android:title="退出"></item>
+    
 
 </menu>
